--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </div>
 
         <ul id="toDoList">
+            <!-- <li class="list">
+                실험 문구 Testing...
+                <a class="closeButton"> 삭제</a>
+            </li> -->
         </ul>
     </main>
 </body>
