add time, storage

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
         </div>
 
         <ul id="toDoList">
-            <!-- <li class="list">
-                실험 문구 Testing...
-                <a class="closeButton"> 삭제</a>
+            <!-- <li class="list">실험 문구 Testing...
+                <span class="time">
+                    2020.09.10 00:00.00
+                </span>
+                <a class="closeButton">
+                    삭제
+                </a>
             </li> -->
         </ul>
+        <div class="resetdiv">
+            <a class="reset" href="javascript:localStorage.clear(); location.reload();">초기화</a>
+        </div>
+
     </main>
 </body>
 
