--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">  
     <title>CYAN4S To Do</title>
+    <meta name="theme-color" content="#2ee6d6">
 </head>
 
 <body>
